embassy-executor/tests/ui/bad_return_impl_trait_nightly.stderr
error[E0277]: the trait bound `u32: TaskReturnValue` is not satisfied
 --> tests/ui/bad_return_impl_trait_nightly.rs:4:1
  |
4 | #[embassy_executor::task]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TaskReturnValue` is not implemented for `u32`
  |
  = help: the following other types implement trait `TaskReturnValue`:
            ()
            <fn() -> ! as _export::HasOutput>::Output
